grammar/grammar.js
    source_file: $ => repeat($._top_level_item),

    _top_level_item: $ => choice(
      $.empty_declaration,
      $._declaration,
    ),

    class_declaration: $ => prec.right(seq(
      optional(field('specifiers', $.uclass_specifiers)),
      'class',
      field('name', $.identifier),
      optional(field('type_parameters', $.type_parameters)),
      choice(
        ';',                                  // forward declaration
        seq(
          optional(seq(':', commaSep1(field('base', $._type_identifier)))),
          field('body', $.class_body),
          optional(';'),
        ),
      ),
    )),

    class_body: $ => seq('{', repeat($._class_member), '}'),

    _class_member: $ => choice(
      $.empty_declaration,
      $.access_declaration,
      $.default_statement,
      $.constructor_declaration,
      $.destructor_declaration,
      $.function_declaration,
      $.variable_declaration,
      $.virtual_property_declaration,
    ),

    // 2.3.1 — visibility / access level / UE macro applied to the following
    // declaration.  The engine accepts these in any order and any combination
    // of `private`/`protected`/`access:Level`/`UPROPERTY()`/`UFUNCTION()`.
    _member_modifier: $ => choice(
      'private',
      'protected',
      $.access_specifier,
      field('specifiers', $.uproperty_specifiers),
      field('specifiers', $.ufunction_specifiers),
    ),

    function_declaration: $ => prec.dynamic(DYN.FUNCTION_DECL, seq(
      repeat($._member_modifier),
      repeat(field('qualifier', choice('mixin', 'local'))),
      field('type', $.type),
      field('name', $.identifier),
      field('parameters', $.parameter_list),
      optional('const'),
      repeat(field('attribute', $.function_attribute)),
      choice(field('body', $.block), ';'),
    )),

    // as_parser.cpp ParseMethodAttributes — the complete set (12 tokens).
    parameter_list: $ => seq(
      '(',
      optional(seq(commaSep1($.parameter), optional(','))),
      ')',
    ),

    variable_declaration: $ => prec.dynamic(DYN.VARIABLE_DECL, seq(
      repeat($._member_modifier),
      field('type', $.type),
      commaSep1($.variable_declarator),
      ';',
    )),

    variable_declarator: $ => seq(
      field('name', $.identifier),
      optional(choice(
        seq('=', field('value', choice($._expression, $.initializer_list))),
        field('arguments', $.argument_list),
      )),
    ),

    // ========================================================================
    // Part 3.3 — UE reflection macros
    // ========================================================================

    type: $ => prec.dynamic(DYN.TYPE, seq(
      optional('const'),
      field('name', choice(
        $.primitive_type,
        $.auto_type,
        $.wildcard_type,
        $._type_identifier,
      )),
      repeat($.array_suffix),
      optional('unresolved_object'),
      optional(field('reference', $.reference_modifier)),
    )),

    primitive_type: _ => choice(
      'void', 'bool',
      'int8', 'int16', 'int', 'int32', 'int64',
      'uint8', 'uint16', 'uint', 'uint32', 'uint64',
      'float', 'float32', 'float64', 'double',
    ),

    auto_type: _ => 'auto',

    // Engine-internal wildcard type (`? Address` in generated declarations).
    _type_identifier: $ => choice(
      $.identifier,
      $.template_type,
      $.qualified_identifier,
    ),

    template_type: $ => seq(
      field('name', $.identifier),
      field('arguments', $.template_arguments),
    ),

    template_arguments: $ => seq('<', commaSep1($.type), '>'),

    // Right-nested: `A::B::C` == A::(B::C).  prec.right picks that reading.
    qualified_identifier: $ => prec.right(seq(
      optional('::'),
      field('scope', choice($.identifier, $.template_type)),
      '::',
      field('name', choice($.identifier, $.template_type, $.qualified_identifier)),
    )),

    // ========================================================================
    // Part 3.4 — Statements
    // ========================================================================

    block: $ => seq('{', repeat($._statement), '}'),

    _statement: $ => choice(
      $.empty_statement,
      $.block,
      $.variable_declaration,
      $.expression_statement,
      $.if_statement,
      $.while_statement,
      $.do_while_statement,
      $.for_statement,
      $.for_each_statement,
      $.switch_statement,
      $.return_statement,
      $.break_statement,
      $.continue_statement,
      $.fallthrough_statement,
    ),

    expression_statement: $ => seq($._expression, ';'),

    if_statement: $ => prec.right(seq(
      'if',
      '(', field('condition', $._expression), ')',
      field('consequence', $._statement),
      optional(seq('else', field('alternative', $._statement))),
    )),

    _expression: $ => choice(
      $.identifier,
      $.qualified_identifier,
      $.number,
      $.string_literal,
      $.heredoc_string,
      $.name_literal,
      $.format_string,
      $.boolean_literal,
      $.null_literal,
      $.assignment_expression,
      $.conditional_expression,
      $.binary_expression,
      $.unary_expression,
      $.update_expression,
      $.call_expression,
      $.member_expression,
      $.subscript_expression,
      $.cast_expression,
      $.parenthesized_expression,
    ),

    parenthesized_expression: $ => seq('(', $._expression, ')'),

    assignment_expression: $ => prec.right(PREC.ASSIGN, seq(
      field('left', $._expression),
      field('operator', choice(
        '=', '+=', '-=', '*=', '/=', '%=', '**=',
        '|=', '&=', '^=', '<<=', '>>=', '>>>=',
      )),
      field('right', choice($._expression, $.initializer_list)),
    )),

    conditional_expression: $ => prec.right(PREC.TERNARY, seq(
      field('condition', $._expression),
      '?',
      field('consequence', $._expression),
      ':',
      field('alternative', $._expression),
    )),

    binary_expression: $ => {
      const table = [
        ['||', PREC.LOGIC_OR],
        ['&&', PREC.LOGIC_AND],
        ['|', PREC.BIT_OR],
        ['^', PREC.BIT_XOR],
        ['&', PREC.BIT_AND],
        ['==', PREC.EQUALITY],
        ['!=', PREC.EQUALITY],
        ['<', PREC.RELATIONAL],
        ['<=', PREC.RELATIONAL],
        ['>', PREC.RELATIONAL],
        ['>=', PREC.RELATIONAL],
        ['<<', PREC.SHIFT],
        ['>>', PREC.SHIFT],
        ['>>>', PREC.SHIFT],
        ['+', PREC.ADDITIVE],
        ['-', PREC.ADDITIVE],
        ['*', PREC.MULTIPLICATIVE],
        ['/', PREC.MULTIPLICATIVE],
        ['%', PREC.MULTIPLICATIVE],
      ];

      return choice(
        ...table.map(([operator, precedence]) => prec.left(
          /** @type {number} */(precedence),
          seq(
            field('left', $._expression),
            field('operator', /** @type {string} */(operator)),
            field('right', $._expression),
          ),
        )),
        // '**' is right-associative
        prec.right(PREC.POWER, seq(
          field('left', $._expression),
          field('operator', '**'),
          field('right', $._expression),
        )),
      );
    },

    unary_expression: $ => prec.right(PREC.UNARY, seq(
      field('operator', choice('-', '+', '!', '~')),
      field('argument', $._expression),
    )),

    update_expression: $ => choice(
      prec.right(PREC.UNARY, seq(
        field('operator', choice('++', '--')),
        field('argument', $._expression),
      )),
      prec.left(PREC.POSTFIX, seq(
        field('argument', $._expression),
        field('operator', choice('++', '--')),
      )),
    ),

    member_expression: $ => prec.left(PREC.POSTFIX, seq(
      field('object', $._expression),
      '.',
      field('property', $.identifier),
    )),

    // Index brackets reuse ARGLIST (ParseExprPostOp -> ParseArgList(false)),
    // so named arguments are legal here: `Arr[Index: 3]`, `Grid[X, Y]`.
    subscript_expression: $ => prec.left(PREC.POSTFIX, seq(
      field('object', $._expression),
      '[',
      commaSep1(field('index', $.argument)),
      ']',
    )),

    // Covers plain calls, method calls, and construct calls (`FVector(1,2,3)`,
    // `TArray<int>(...)`).  Whether the callee is a type is a semantic
    // decision left to the LSP (angelscript.bnf §4.4).
    call_expression: $ => prec.left(PREC.POSTFIX, seq(
      field('function', $._callee),
      field('arguments', $.argument_list),
    )),

    _callee: $ => choice($._expression, $.template_type, $.primitive_type),

    argument_list: $ => seq(
      '(',
      optional(seq(commaSep1($.argument), optional(','))),
      ')',
    ),

    argument: $ => choice(
      $.named_argument,
      $.void_argument,
      $._expression,
      $.initializer_list,
    ),

    // `Print("x", Duration=30)` / `Math::Clamp(X: 2.0)`
    // (both forms are enabled: asEP_ALTER_SYNTAX_NAMED_ARGS = 1)
    named_argument: $ => prec.dynamic(DYN.NAMED_ARGUMENT, seq(
      field('name', $.identifier),
      choice(':', '='),
      field('value', choice($._expression, $.initializer_list, $.void_argument)),
    )),

    // `Function(void)` skips an out-parameter.  Higher precedence than
    // `primitive_type` so that a bare `void` in argument position is never
    // read as a type.
    void_argument: _ => prec(1, 'void'),

    cast_expression: $ => seq(
      'Cast',
      '<', field('type', $.type), '>',
      '(', field('value', $._expression), ')',
    ),

    // Part 3.6 — init lists; empty slots are allowed: `{1, , 3}`
    identifier: _ => /[A-Za-z_][A-Za-z0-9_]*/,

    boolean_literal: _ => choice('true', 'false'),
    null_literal: _ => 'nullptr',

    number: _ => {
      const decimal = /[0-9]+/;
      const hex = /0[xX][0-9a-fA-F]+/;
      const binary = /0[bB][01]+/;
      const octal = /0[oO][0-7]+/;
      const explicitDecimal = /0[dD][0-9]+/;
      const float1 = /[0-9]+\.[0-9]*([eE][+-]?[0-9]+)?[fF]?/;
      const float2 = /\.[0-9]+([eE][+-]?[0-9]+)?[fF]?/;
      const float3 = /[0-9]+[eE][+-]?[0-9]+[fF]?/;
      const float4 = /[0-9]+[fF]/;

      return token(choice(
        hex, binary, octal, explicitDecimal,
        float1, float2, float3, float4,
        decimal,
      ));
    },

    string_literal: _ => token(seq(
      '"',
      repeat(choice(/[^"\\\r\n]/, /\\(.|\r?\n)/)),
      '"',
    )),

    // `"""..."""` — multi-line, no escape processing
    heredoc_string: _ => token(seq(
      '"""',
      repeat(choice(/[^"]/, /"[^"]/, /""[^"]/)),
      '"""',
    )),

    // FName literal: n"Name"
    name_literal: _ => token(seq(
      'n"',
      repeat(choice(/[^"\\\r\n]/, /\\./)),
      '"',
    )),

    // Format string: f"text {expr =:spec} text"
    format_string: $ => seq(
      'f"',
      repeat(choice(
        $.format_string_content,
        $.format_interpolation,
      )),
      '"',
    ),

    format_interpolation: $ => seq(
      '{',
      field('expression', $._expression),
      optional('='),
      optional(seq(':', field('format', $.format_spec))),
      '}',
    ),

    comment: _ => token(choice(
      seq('//', /[^\r\n]*/),
      seq('/*', /[^*]*\*+([^/*][^*]*\*+)*/, '/'),
    )),

    // Preprocessor lines are kept opaque (angelscript.bnf §1.7 / §5.7).
    preproc_line: _ => token(seq('#', /[^\r\n]*/)),
  },
});
