grammar/test/corpus/expressions.txt
================================================================================
binary operator precedence
================================================================================

void Test()
{
    A = B || C && D | E ^ F & G == H < I << J + K * L ** M;
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    (type
      (primitive_type))
    (identifier)
    (parameter_list)
    (block
      (expression_statement
        (assignment_expression
          (identifier)
          (binary_expression
            (identifier)
            (binary_expression
              (identifier)
              (binary_expression
                (identifier)
                (binary_expression
                  (identifier)
                  (binary_expression
                    (identifier)
                    (binary_expression
                      (identifier)
                      (binary_expression
                        (identifier)
                        (binary_expression
                          (identifier)
                          (binary_expression
                            (identifier)
                            (binary_expression
                              (identifier)
                              (binary_expression
                                (identifier)
                                (identifier)))))))))))))))))

================================================================================
all binary operators
================================================================================

void Test()
{
    A = B == C;
    A = B != C;
    A = B < C;
    A = B <= C;
    A = B > C;
    A = B >= C;
    A = B << C;
    A = B >> C;
    A = B >>> C;
    A = B + C;
    A = B - C;
    A = B * C;
    A = B / C;
    A = B % C;
    A = B ** C;
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    (type
      (primitive_type))
    (identifier)
    (parameter_list)
    (block
      (expression_statement
        (assignment_expression
          (identifier)
          (binary_expression
            (identifier)
            (identifier))))
      (expression_statement
        (assignment_expression
          (identifier)
          (binary_expression
            (identifier)
            (identifier))))
      (expression_statement
        (assignment_expression
          (identifier)
          (binary_expression
            (identifier)
            (identifier))))
      (expression_statement
        (assignment_expression
          (identifier)
          (binary_expression
            (identifier)
            (identifier))))
      (expression_statement
        (assignment_expression
          (identifier)
          (binary_expression
            (identifier)
            (identifier))))
      (expression_statement
        (assignment_expression
          (identifier)
          (binary_expression
            (identifier)
            (identifier))))
      (expression_statement
        (assignment_expression
          (identifier)
          (binary_expression
            (identifier)
            (identifier))))
      (expression_statement
        (assignment_expression
          (identifier)
          (binary_expression
            (identifier)
            (identifier))))
      (expression_statement
        (assignment_expression
          (identifier)
          (binary_expression
            (identifier)
            (identifier))))
      (expression_statement
        (assignment_expression
          (identifier)
          (binary_expression
            (identifier)
            (identifier))))
      (expression_statement
        (assignment_expression
          (identifier)
          (binary_expression
            (identifier)
            (identifier))))
      (expression_statement
        (assignment_expression
          (identifier)
          (binary_expression
            (identifier)
            (identifier))))
      (expression_statement
        (assignment_expression
          (identifier)
          (binary_expression
            (identifier)
            (identifier))))
      (expression_statement
        (assignment_expression
          (identifier)
          (binary_expression
            (identifier)
            (identifier))))
      (expression_statement
        (assignment_expression
          (identifier)
          (binary_expression
            (identifier)
            (identifier)))))))

================================================================================
parenthesized expressions override precedence
================================================================================

void Test()
{
    A = (B + C) * D;
    A = ((B));
    if ((A > 0) && (B < 10))
        Use();
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    (type
      (primitive_type))
    (identifier)
    (parameter_list)
    (block
      (expression_statement
        (assignment_expression
          (identifier)
          (binary_expression
            (parenthesized_expression
              (binary_expression
                (identifier)
                (identifier)))
            (identifier))))
      (expression_statement
        (assignment_expression
          (identifier)
          (parenthesized_expression
            (parenthesized_expression
              (identifier)))))
      (if_statement
        (binary_expression
          (parenthesized_expression
            (binary_expression
              (identifier)
              (number)))
          (parenthesized_expression
            (binary_expression
              (identifier)
              (number))))
        (expression_statement
          (call_expression
            (identifier)
            (argument_list)))))))

================================================================================
unary, update and ternary expressions
================================================================================

void Test()
{
    A = -B + !C + ~D;
    ++A;
    A--;
    B = A > 0 ? A : -A;
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    (type
      (primitive_type))
    (identifier)
    (parameter_list)
    (block
      (expression_statement
        (assignment_expression
          (identifier)
          (binary_expression
            (binary_expression
              (unary_expression
                (identifier))
              (unary_expression
                (identifier)))
            (unary_expression
              (identifier)))))
      (expression_statement
        (update_expression
          (identifier)))
      (expression_statement
        (update_expression
          (identifier)))
      (expression_statement
        (assignment_expression
          (identifier)
          (conditional_expression
            (binary_expression
              (identifier)
              (number))
            (identifier)
            (unary_expression
              (identifier))))))))

================================================================================
calls, members, subscripts, scopes
================================================================================

void Test()
{
    Math::Clamp(1.0, 0.0, 0.5);
    this.Component.SetHiddenInGame(false);
    Super::BeginPlay();
    Map["Key"] = 12;
    Grid[X, Y] = 0;
    Array[0].Member.Call();
    FVector(1.0, 2.0, 3.0);
    TArray<int>();
    UBillboardComponent::Create(this, n"Billboard");
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    (type
      (primitive_type))
    (identifier)
    (parameter_list)
    (block
      (expression_statement
        (call_expression
          (qualified_identifier
            (identifier)
            (identifier))
          (argument_list
            (argument
              (number))
            (argument
              (number))
            (argument
              (number)))))
      (expression_statement
        (call_expression
          (member_expression
            (member_expression
              (identifier)
              (identifier))
            (identifier))
          (argument_list
            (argument
              (boolean_literal)))))
      (expression_statement
        (call_expression
          (qualified_identifier
            (identifier)
            (identifier))
          (argument_list)))
      (expression_statement
        (assignment_expression
          (subscript_expression
            (identifier)
            (argument
              (string_literal)))
          (number)))
      (expression_statement
        (assignment_expression
          (subscript_expression
            (identifier)
            (argument
              (identifier))
            (argument
              (identifier)))
          (number)))
      (expression_statement
        (call_expression
          (member_expression
            (member_expression
              (subscript_expression
                (identifier)
                (argument
                  (number)))
              (identifier))
            (identifier))
          (argument_list)))
      (expression_statement
        (call_expression
          (identifier)
          (argument_list
            (argument
              (number))
            (argument
              (number))
            (argument
              (number)))))
      (expression_statement
        (call_expression
          (template_type
            (identifier)
            (template_arguments
              (type
                (primitive_type))))
          (argument_list)))
      (expression_statement
        (call_expression
          (qualified_identifier
            (identifier)
            (identifier))
          (argument_list
            (argument
              (identifier))
            (argument
              (name_literal))))))))

================================================================================
named arguments (colon and assignment form) and void argument
================================================================================

void Test()
{
    Print("Selected", Duration = 30);
    Math::Clamp(X: 2.0, Min: 0.0, Max: 0.5);
    TraceLine(Start, End, OutHit = void);
    SkipOutParameter(void);
    Arr[Index: 3] = 1;
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    (type
      (primitive_type))
    (identifier)
    (parameter_list)
    (block
      (expression_statement
        (call_expression
          (identifier)
          (argument_list
            (argument
              (string_literal))
            (argument
              (named_argument
                (identifier)
                (number))))))
      (expression_statement
        (call_expression
          (qualified_identifier
            (identifier)
            (identifier))
          (argument_list
            (argument
              (named_argument
                (identifier)
                (number)))
            (argument
              (named_argument
                (identifier)
                (number)))
            (argument
              (named_argument
                (identifier)
                (number))))))
      (expression_statement
        (call_expression
          (identifier)
          (argument_list
            (argument
              (identifier))
            (argument
              (identifier))
            (argument
              (named_argument
                (identifier)
                (void_argument))))))
      (expression_statement
        (call_expression
          (identifier)
          (argument_list
            (argument
              (void_argument)))))
      (expression_statement
        (assignment_expression
          (subscript_expression
            (identifier)
            (argument
              (named_argument
                (identifier)
                (number))))
          (number))))))

================================================================================
cast expression
================================================================================

void Test()
{
    auto Actor = Cast<AExampleActor>(Object);
    if (Cast<USceneComponent>(Component) != nullptr)
        Use();
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    (type
      (primitive_type))
    (identifier)
    (parameter_list)
    (block
      (variable_declaration
        (type
          (auto_type))
        (variable_declarator
          (identifier)
          (cast_expression
            (type
              (identifier))
            (identifier))))
      (if_statement
        (binary_expression
          (cast_expression
            (type
              (identifier))
            (identifier))
          (null_literal))
        (expression_statement
          (call_expression
            (identifier)
            (argument_list)))))))

================================================================================
assignment operators and compound assignment
================================================================================

void Test()
{
    A = 1;
    A += 1;
    A -= 1;
    A *= 2;
    A /= 2;
    A %= 2;
    A **= 2;
    A |= 1;
    A &= 1;
    A ^= 1;
    A <<= 2;
    A >>= 2;
    A >>>= 2;
    A = B = C;
    Map.FindOrAdd("Key") = 21;
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    (type
      (primitive_type))
    (identifier)
    (parameter_list)
    (block
      (expression_statement
        (assignment_expression
          (identifier)
          (number)))
      (expression_statement
        (assignment_expression
          (identifier)
          (number)))
      (expression_statement
        (assignment_expression
          (identifier)
          (number)))
      (expression_statement
        (assignment_expression
          (identifier)
          (number)))
      (expression_statement
        (assignment_expression
          (identifier)
          (number)))
      (expression_statement
        (assignment_expression
          (identifier)
          (number)))
      (expression_statement
        (assignment_expression
          (identifier)
          (number)))
      (expression_statement
        (assignment_expression
          (identifier)
          (number)))
      (expression_statement
        (assignment_expression
          (identifier)
          (number)))
      (expression_statement
        (assignment_expression
          (identifier)
          (number)))
      (expression_statement
        (assignment_expression
          (identifier)
          (number)))
      (expression_statement
        (assignment_expression
          (identifier)
          (number)))
      (expression_statement
        (assignment_expression
          (identifier)
          (number)))
      (expression_statement
        (assignment_expression
          (identifier)
          (assignment_expression
            (identifier)
            (identifier))))
      (expression_statement
        (assignment_expression
          (call_expression
            (member_expression
              (identifier)
              (identifier))
            (argument_list
              (argument
                (string_literal))))
          (number))))))
